<resources>
    <string name="app_name">FinalExam</string>
    <string name="action_settings">Settings</string>
    <string name="email_text_view">Email Address</string>
    <string name="meeting_text_view">Meeting</string>
    <string name="meeting_host_text_view">Meeting Host</string>
    <string name="title_activity_meeting">MeetingActivity</string>
    <string name="find_meeting_text_view">Find Meeting</string>
    <string name="name_text_view">Name</string>
    <string name="description_text_view">Description</string>
    <string name="location_text_view">Location</string>
    <string name="date_text_view">Date</string>
    <string name="time_text_view">Time</string>
    <string name="add_meeting_text_view">Add Meeting</string>
    <string name="host_id_text_view">Host ID</string>
    <string name="add_meeting_button">Add Meeting</string>
    <string name="view_meetings_button">View Meetings</string>
    <string name="add_meeting_host_button">Add Meeting Host</string>
    <string name="view_meeting_hosts_button">View Meeting Hosts</string>
    <string name="title_activity_host_results">HostResultsActivity</string>
    <string name="title_activity_meeting_results">MeetingResultsActivity</string>
</resources>
